--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 html
 {
   height: 100%;
+  width: 100%;
 }
 
 *
@@ -8,7 +9,6 @@ html
   margin: 0;
   padding: 0;
 }
-
 
 body
 {
@@ -19,18 +19,26 @@ body
 p
 {
   font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
   padding: 0 0 20px 0;
   line-height: 1.7em;
   text-align: left;
 }
 
-h1
+#semi_title
 {
-    font-family: 'Open Sans', sans-serif;
-  	font-size: 20px;
+  font-family: 'Open Sans semibold', sans-serif;
+}
+
+h1
+
+{
+    font-family: 'Open Sans semibold', sans-serif;
+  	font-size: 22px;
   	font-style: normal;
   	font-variant: normal;
-  	font-weight: 400;
+  	font-weight: 100;
     line-height: 20px
 
 }
