--- a/style/style.css
+++ b/style/style.css
@@ -174,7 +174,7 @@ header
 {
   height: 297px;
   width: 100%;
-  background-image: url("3/c3bg.png");
+  background-image: url("3/c3bg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-color: #2a2a2a;
